Adding Google map with markers

--- a/searchapartment.html
+++ b/searchapartment.html
@@ -293,10 +293,7 @@
         <div class="view-card-header">
           <h5>Search by Map</h5>
         </div>
-        <div class="card-body card-body-cascade text-center">
-          <div id="map-container-google-9" class="z-depth-1-half map-container" style="height: 300px">
-            <iframe src="https://maps.google.com/maps?q=Madryt&t=&z=13&ie=UTF8&iwloc=&output=embed" style="border:0" allowfullscreen></iframe>
-          </div>
+        <div id = "map">
         </div>
       </div>
     </div>
@@ -352,8 +349,9 @@
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+<script async defersrc="https://maps.googleapis.com/maps/api/js?key="AIzaSyCOLtR_9szBl7EVGkkAt3_UeWUiW4whytQ"&callback=initMap"></script>
+<script src="Assets/JS/maps.js"></script>
 
 </body>
 
