Assets folder renamed to assets

--- a/searchapartment.html
+++ b/searchapartment.html
@@ -14,9 +14,9 @@
   <!-- FontAwesome Icons -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Logo/Icon on Tab  -->
-  <link rel="icon" href="Assets/Images/favicon-32x32.png" type="image/png" />
+  <link rel="icon" href="assets/Images/favicon-32x32.png" type="image/png" />
   <!-- Style CSS -->
-  <link rel="stylesheet" href="Assets/CSS/style.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
 
 
@@ -51,7 +51,7 @@
           <ul class="navbar-nav navbar-right">
             <li class="nav-item">
             <a class="nav-link" href="index.ES.html">
-          <img src="Assets/Images/spain.png" alt="Spanish-flag" width="15">
+          <img src="assets/Images/spain.png" alt="Spanish-flag" width="15">
             </a>
             </li>
           <!--Button trigger modal-->
@@ -244,8 +244,8 @@
   <div class="row">
     <div class="col-md-3">
       <div class="gallery">
-        <a target="_blank" href="Assets/Images/bedroom.jpg">
-      <img src="Assets/Images/bedroom.jpg" alt="Bedroom" width="300" height="150">
+        <a target="_blank" href="assets/Images/bedroom.jpg">
+      <img src="assets/Images/bedroom.jpg" alt="Bedroom" width="300" height="150">
     </a>
         <div class="desc">Bedroom - Apartment</div>
       </div>
@@ -254,8 +254,8 @@
 
     <div class="col-md-3">
       <div class="gallery">
-        <a target="_blank" href="Assets/Images/livingroom.jpg">
-      <img src="Assets/Images/livingroom.jpg" alt="Livingroom" width="300" height="150">
+        <a target="_blank" href="assets/Images/livingroom.jpg">
+      <img src="assets/Images/livingroom.jpg" alt="Livingroom" width="300" height="150">
     </a>
         <div class="desc">Sittingroom - Apartment</div>
       </div>
@@ -264,8 +264,8 @@
 
     <div class="col-md-3">
       <div class="gallery">
-        <a target="_blank" href="Assets/Images/bathroom.jpg">
-      <img src="Assets/Images/bathroom.jpg" alt="Bathroom Apartment" width="300" height="150">
+        <a target="_blank" href="assets/Images/bathroom.jpg">
+      <img src="assets/Images/bathroom.jpg" alt="Bathroom Apartment" width="300" height="150">
     </a>
         <div class="desc">Bathroom - Apartment</div>
       </div>
@@ -274,8 +274,8 @@
 
     <div class="col-md-3">
       <div class="gallery">
-        <a target="_blank" href="Assets/Images/studio.jpg">
-      <img src="Assets/Images/studio.jpg" alt="Studio" width="300" height="150">
+        <a target="_blank" href="assets/Images/studio.jpg">
+      <img src="assets/Images/studio.jpg" alt="Studio" width="300" height="150">
     </a>
         <div class="desc">Studio - Apartment</div>
       </div>
@@ -286,23 +286,9 @@
  
 <!--Google map-->
 
-<div class="container-map">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="card card-cascade narrower">
-        <div class="view-card-header">
-          <h5>Search by Map</h5>
-        </div>
-        <div class="card-body card-body-cascade text-center">
-          <div id="map-container-google-9" class="z-depth-1-half map-container" style="height: 300px">
-            <iframe src="https://maps.google.com/maps?q=Madryt&t=&z=13&ie=UTF8&iwloc=&output=embed" style="border:0" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<div id="map"><h5>Search by Map</h5></div>
 
+    
 
 <!--Footer-->
 <footer class="container-footer">
@@ -353,6 +339,9 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+<script async defersrc="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOLtR_9szBl7EVGkkAt3_UeWUiW4whytQ&callback=initMap"></script>
+<script src="assets/js/maps.js"></script>
 
 
 </body>
