Google map implementation

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <!--FontAwesome Icons-->
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <!--Logo/Icon on Tab-->
-  <link rel="icon" href="Assets/Images/favicon-32x32.png" type="image/png" />
+  <link rel="icon" href="assets/Images/favicon-32x32.png" type="image/png" />
   <!--Style CSS-->
-  <link rel="stylesheet" href="Assets/CSS/style.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
 
 <body>
@@ -52,7 +52,7 @@
           <ul class="navbar-nav navbar-right">
             <li class="nav-item">
             <a class="nav-link" href="index.ES.html">
-          <img src="Assets/Images/spain.png" alt="Spanish-flag" width="15">
+          <img src="assets/Images/spain.png" alt="Spanish-flag" width="15">
             </a>
             </li>
           <!--Button trigger modal-->
@@ -142,7 +142,7 @@
   <!--Welcome-->
 
   <div class="home-container">
-    <img src="Assets/Images/Madrid.jpg" alt="Madrid" width="1024">
+    <img src="assets/Images/Madrid.jpg" alt="Madrid" width="1024">
     <h1 style="font-size: 4vw">Welcome to InMadrid!</h1>
     <h2 style="font-size: 3vw">Your home in Madrid for mid/long stay.</h2>
     <a href="searchapartment.html" class="btn btn-search" role="button" aria-pressed="true">Find your home!</a>
