--- a/rentout.html
+++ b/rentout.html
@@ -14,9 +14,9 @@
   <!-- FontAwesome Icons -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Logo/Icon on Tab  -->
-  <link rel="icon" href="Assets/Images/favicon-32x32.png" type="image/png" />
+  <link rel="icon" href="assets/Images/favicon-32x32.png" type="image/png" />
   <!-- Style CSS -->
-  <link rel="stylesheet" href="Assets/CSS/style.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
 
 
@@ -50,7 +50,7 @@
           <ul class="navbar-nav navbar-right">
             <li class="nav-item">
             <a class="nav-link" href="index.ES.html">
-          <img src="Assets/Images/spain.png" alt="Spanish-flag" width="15">
+          <img src="assets/Images/spain.png" alt="Spanish-flag" width="15">
             </a>
             </li>
           <!--Button trigger modal-->
@@ -156,7 +156,7 @@
   <h1 class="contact">Contact Us!</h1>
   <div class="row-contact">
     <div class="col-sm-6">
-      <img src="Assets/Images/sittingroom.png">
+      <img src="assets/Images/sittingroom.png">
     </div>  
     <div class="col-xs-12 col-sm-6">
       
