--- a/searchapartment.html
+++ b/searchapartment.html
@@ -286,7 +286,21 @@
  
 <!--Google map-->
 
-<div id="map"><h5>Search by Map</h5></div>
+<div class="container-map">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card card-cascade narrower">
+        <div class="view-card-header">
+          <h5>Search by Map</h5>
+        </div>
+        <div class="card-body card-body-cascade text-center">
+          <div id="map"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
     
 
@@ -340,7 +354,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-<script async defersrc="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOLtR_9szBl7EVGkkAt3_UeWUiW4whytQ&callback=initMap"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOLtR_9szBl7EVGkkAt3_UeWUiW4whytQ&callback=initMap"></script>
 <script src="assets/js/maps.js"></script>
 
 
