--- a/rentout.html
+++ b/rentout.html
@@ -17,6 +17,16 @@
   <link rel="icon" href="assets/Images/favicon-32x32.png" type="image/png" />
   <!-- Style CSS -->
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("user_beHlAh5GReL0LXJKxQclh");
+      emailjs.send("gmail", "inmadrid_contact_form", {
+    name: 'Rocio',
+    notes: 'I have an apartment available to rent out ...'
+}; )
+   })();
+</script>
 </head>
 
 
@@ -163,19 +173,19 @@
       <form action="/action_page.php">
         <div class="form-row">
           <div class="col-25">
-            <label for="fname">First Name</label>
+            <label for="fname">Name</label>
           </div>
           <div class="col-75">
-            <input type="text" id="fname" name="firstname" placeholder="Your name.. " required>
+            <input type="text" id="name" name="name" placeholder="Your name.. " required>
           </div>
         </div>
 
         <div class="form-row">
           <div class="col-25">
-            <label for="lname">Last Name</label>
+            <label for="lname">Email</label>
           </div>
           <div class="col-75">
-            <input type="text" id="lname" name="lastname" placeholder="Your last name.. " required>
+            <input type="text" id="email" name="email" placeholder="Your email address.. " required>
           </div>
         </div>
 
