--- a/rentout.html
+++ b/rentout.html
@@ -21,11 +21,7 @@
 <script type="text/javascript">
    (function(){
       emailjs.init("user_beHlAh5GReL0LXJKxQclh");
-      emailjs.send("gmail", "inmadrid_contact_form", {
-    name: 'Rocio',
-    notes: 'I have an apartment available to rent out ...'
-}; )
-   })();
+   });
 </script>
 </head>
 
@@ -179,7 +175,7 @@
             <input type="text" id="name" name="name" placeholder="Your name.. " required>
           </div>
         </div>
-
+<form onsubmit="return sendMail(this); method="POST">
         <div class="form-row">
           <div class="col-25">
             <label for="lname">Email</label>
@@ -288,7 +284,7 @@
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+      <script src="assets/js/contact.js"></script>
 
       </body>
 
