Updating contact.js

--- a/rentout.html
+++ b/rentout.html
@@ -17,12 +17,9 @@
   <link rel="icon" href="assets/Images/favicon-32x32.png" type="image/png" />
   <!-- Style CSS -->
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+  <!-- Emailjs -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
-<script type="text/javascript">
-   (function(){
-      emailjs.init("user_beHlAh5GReL0LXJKxQclh");
-   });
-</script>
+  <script type="text/javascript">(function(){ emailjs.init("user_beHlAh5GReL0LXJKxQclh");});</script>
 </head>
 
 
@@ -181,7 +178,7 @@
             <label for="lname">Email</label>
           </div>
           <div class="col-75">
-            <input type="text" id="email" name="email" placeholder="Your email address.. " required>
+            <input type="text" id="emailaddress" name="emailaddress" placeholder="Your email address.. " required>
           </div>
         </div>
 
@@ -230,6 +227,7 @@
     </div>
   </div>
 </div>
+</form>
   
 
   
