Adding Id to type of house form

--- a/rentout.html
+++ b/rentout.html
@@ -187,7 +187,7 @@
             <label for="house">Type of House</label>
             </div>
             <div class="col-75">
-            <select class="house " name="typeofhouse">
+            <select id="type" class="house " name="typeofhouse">
                   <option value="apartment">Apartment</option>
                   <option value="studio">Studio</option>
                   <option value="private room">Private Room</option>
