Adding info to apartments

--- a/searchapartment.html
+++ b/searchapartment.html
@@ -247,9 +247,28 @@
         <a target="_blank" href="assets/Images/bedroom.jpg">
       <img src="assets/Images/bedroom.jpg" alt="Bedroom" width="300" height="150">
     </a>
-        <div class="desc">Bedroom - Apartment</div>
-      </div>
-    </div>
+        <div class="desc">Apartment</div>
+        <span>
+        <i class="fa fa-map-marker"></i>
+                North, Madrid
+        </span> 
+        <span>
+        <div class="bed-room">
+        <i class="fa fa-bed"></i> 2 Bedroom
+        </div>
+        <div class="bath-room">
+        <i class="fa fa-bath"></i>1 Bathroom
+        </div>
+        </span>
+        <span>
+        <div class="rent-price pull-left">
+        Rent price: 1.500 €
+        </span>
+        </div>
+        </div>
+        </div>
+    
+   
 
 
     <div class="col-md-3">
@@ -257,8 +276,25 @@
         <a target="_blank" href="assets/Images/livingroom.jpg">
       <img src="assets/Images/livingroom.jpg" alt="Livingroom" width="300" height="150">
     </a>
-        <div class="desc">Sittingroom - Apartment</div>
-      </div>
+        <div class="desc">Studio</div>
+        <span>
+        <i class="fa fa-map-marker"></i>
+                West, Madrid
+        </span> 
+        <span>
+        <div class="bed-room">
+        <i class="fa fa-bed"></i> 1 Bedroom
+        </div>
+        <div class="bath-room">
+        <i class="fa fa-bath"></i>1 Bathroom
+        </div>
+        </span>
+        <span>
+        <div class="rent-price pull-left">
+        Rent price: 900 €
+        </span>
+        </div>
+        </div>
     </div>
 
 
@@ -267,7 +303,24 @@
         <a target="_blank" href="assets/Images/bathroom.jpg">
       <img src="assets/Images/bathroom.jpg" alt="Bathroom Apartment" width="300" height="150">
     </a>
-        <div class="desc">Bathroom - Apartment</div>
+        <div class="desc">Private room with Bathroom</div>
+        <span>
+        <i class="fa fa-map-marker"></i>
+                South, Madrid
+        </span> 
+        <span>
+        <div class="bed-room">
+        <i class="fa fa-bed"></i> 1 Bedroom
+        </div>
+        <div class="bath-room">
+        <i class="fa fa-bath"></i>1 Bathroom
+        </div>
+        </span>
+        <span>
+        <div class="rent-price pull-left">
+        Rent price: 500 €
+        </span>
+        </div>
       </div>
     </div>
 
@@ -277,8 +330,23 @@
         <a target="_blank" href="assets/Images/studio.jpg">
       <img src="assets/Images/studio.jpg" alt="Studio" width="300" height="150">
     </a>
-        <div class="desc">Studio - Apartment</div>
-      </div>
+        <div class="desc">Apartment</div>
+        <span>
+        <i class="fa fa-map-marker"></i>
+                Center, Madrid
+        </span> 
+        <span>
+        <div class="bed-room">
+        <i class="fa fa-bed"></i> 1 Bedroom
+        </div>
+        <div class="bath-room">
+        <i class="fa fa-bath"></i>1 Bathroom
+        </div>
+        </span>
+        <span>
+        <div class="rent-price pull-left">
+        Rent price: 1.200 €
+        </span>
     </div>
   </div>
 </div>
@@ -298,9 +366,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
 
     
 
