Styling gallery listing

--- a/searchapartment.html
+++ b/searchapartment.html
@@ -249,10 +249,6 @@
     </a>
         <div class="desc">Apartment</div>
         <span>
-        <i class="fa fa-map-marker"></i>
-                North, Madrid
-        </span> 
-        <span>
         <div class="bed-room">
         <i class="fa fa-bed"></i> 2 Bedroom
         </div>
@@ -261,9 +257,13 @@
         </div>
         </span>
         <span>
-        <div class="rent-price pull-left">
+        <div class="rent-price">
         Rent price: 1.500 €
         </span>
+        <span><br>
+        <i class="fa fa-map-marker"></i>
+                North, Madrid
+        </span> 
         </div>
         </div>
         </div>
@@ -278,10 +278,6 @@
     </a>
         <div class="desc">Studio</div>
         <span>
-        <i class="fa fa-map-marker"></i>
-                West, Madrid
-        </span> 
-        <span>
         <div class="bed-room">
         <i class="fa fa-bed"></i> 1 Bedroom
         </div>
@@ -290,9 +286,13 @@
         </div>
         </span>
         <span>
-        <div class="rent-price pull-left">
+        <div class="rent-price">
         Rent price: 900 €
         </span>
+         <span><br>
+        <i class="fa fa-map-marker"></i>
+                West, Madrid
+        </span> 
         </div>
         </div>
     </div>
@@ -303,11 +303,7 @@
         <a target="_blank" href="assets/Images/bathroom.jpg">
       <img src="assets/Images/bathroom.jpg" alt="Bathroom Apartment" width="300" height="150">
     </a>
-        <div class="desc">Private room with Bathroom</div>
-        <span>
-        <i class="fa fa-map-marker"></i>
-                South, Madrid
-        </span> 
+        <div class="desc">Private room with Bathroom</div> 
         <span>
         <div class="bed-room">
         <i class="fa fa-bed"></i> 1 Bedroom
@@ -317,9 +313,13 @@
         </div>
         </span>
         <span>
-        <div class="rent-price pull-left">
+        <div class="rent-price">
         Rent price: 500 €
         </span>
+        <span><br>
+        <i class="fa fa-map-marker"></i>
+                South, Madrid
+        </span><br>
         </div>
       </div>
     </div>
@@ -332,10 +332,6 @@
     </a>
         <div class="desc">Apartment</div>
         <span>
-        <i class="fa fa-map-marker"></i>
-                Center, Madrid
-        </span> 
-        <span>
         <div class="bed-room">
         <i class="fa fa-bed"></i> 1 Bedroom
         </div>
@@ -344,11 +340,17 @@
         </div>
         </span>
         <span>
-        <div class="rent-price pull-left">
+        <div class="rent-price">
         Rent price: 1.200 €
         </span>
+        <span><br>
+        <i class="fa fa-map-marker"></i>
+                Center, Madrid
+        </span> 
     </div>
   </div>
+</div>
+</div>
 </div>
  
  
