--- a/searchapartment.html
+++ b/searchapartment.html
@@ -22,43 +22,43 @@
 
 
 <!--Navbar-->
-      <nav class="navbar navbar-expand-sm navbar-light bg-transparent fixed-top">
-      <!--Collapse button-->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!--Collapsible content-->
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <!--Links-->
-        <ul class="navbar-nav">
-          <li class="nav-item-active">
-            <a class="nav-link" href="index.html"><strong>InMadrid</strong></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="searchapartment.html">Search Apartment</a>
-          </li>
-          <!--Dropdown-->
-          <li class="nav-item">
-            <a class="nav-link dropdown-toggle" href="rentout.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
-          For Landlords</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="rentout.html">Rent Out</a>
-              <a class="dropdown-item" href="homestaging.html">Home Staging</a>
-            </div>
-          </li>
-          </ul>
-    <!--Language options-->
-          <ul class="navbar-nav navbar-right">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="index.html"><strong>InMadrid</strong></a>
+<!--Collapse button-->  
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+<!--Collapsible content-->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto mt-lg-0">
+<!--Links-->
+      <li class="nav-item">
+        <a class="nav-link" href="searchapartment.html">Search Apartment<span class="sr-only">(current)</span></a>
+      </li>
+ <!--Dropdown-->     
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="rentout.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+          For Landlords
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="rentout.html">Rent Out</a>
+          <a class="dropdown-item" href="homestaging.html">Home Staging</a>
+        </div>
+      </li>
+    </ul>
+<!--Language options-->
+          <ul class="navbar-nav">
             <li class="nav-item">
-            <a class="nav-link" href="index.ES.html">
-          <img src="assets/Images/spain.png" alt="Spanish-flag" width="15">
+            <a class="nav-link" id="flag" href="index.ES.html">
+          <img src="assets/Images/spain.png" alt="Spanish-flag" width="18"> ES
             </a>
             </li>
-          <!--Button trigger modal-->
+<!--Button trigger modal-->
             <li class="nav-item">
             <button type="button" class="btn btn-sm navbar-btn" data-toggle="modal" data-target="#LogInModal">
             Sign In
             </button>
+            <span></span>
             </li>
             <li class="nav-item">
             <button type="button" class="btn btn-sm navbar-btn" data-toggle="modal" data-target="#SignUpModal">
@@ -66,9 +66,9 @@
             </button>
             </li>
           </ul>
-      </div>
-    </nav>
-
+  </div>
+</nav>
+     
     <!--Sign In Modal-->
   <div class="modal fade" id="LogInModal" tabindex="-1" role="dialog" aria-labelledby="LogInModal" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -101,7 +101,7 @@
     </div>
 
 
-  <!--SignUp Modal-->
+  <!--Sign Up Modal-->
   <div class="modal fade" id="SignUpModal" tabindex="-1" role="dialog" aria-labelledby="SignUpModal" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
