Adding ES pages

--- a/searchapartment.html
+++ b/searchapartment.html
@@ -18,7 +18,7 @@
   <!-- Style CSS -->
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 </head>
-
+<body>
 
 
 <!--Navbar-->
@@ -30,10 +30,10 @@
   </button>
 <!--Collapsible content-->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto mt-lg-0">
+    <ul class="navbar-nav mr-auto">
 <!--Links-->
       <li class="nav-item">
-        <a class="nav-link" href="searchapartment.html">Search Apartment<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="searchapartment.html">Search Apartment</a>
       </li>
  <!--Dropdown-->     
       <li class="nav-item dropdown">
