Changing href and src of images to correct assetsfolder

--- a/searchapartment.ES.html
+++ b/searchapartment.ES.html
@@ -241,8 +241,8 @@
   <div class="row">
     <div class="col-md-3">
       <div class="gallery">
-        <a target="_blank" href="Assets/Images/bedroom.jpg">
-      <img src="Assets/Images/bedroom.jpg" alt="Dormitorio" width="300" height="150">
+        <a target="_blank" href="assets/Images/bedroom.jpg">
+      <img src="assets/Images/bedroom.jpg" alt="Dormitorio" width="300" height="150">
     </a>
         <div class="desc">Dormitorio - Apartamento</div>
       </div>
@@ -251,8 +251,8 @@
 
     <div class="col-md-3">
       <div class="gallery">
-        <a target="_blank" href="Assets/Images/livingroom.jpg">
-      <img src="Assets/Images/livingroom.jpg" alt="Livingroom" width="300" height="150">
+        <a target="_blank" href="assets/Images/livingroom.jpg">
+      <img src="assets/Images/livingroom.jpg" alt="Livingroom" width="300" height="150">
     </a>
         <div class="desc">Salón- Apartamento</div>
       </div>
@@ -261,8 +261,8 @@
 
     <div class="col-md-3">
       <div class="gallery">
-        <a target="_blank" href="Assets/Images/bathroom.jpg">
-      <img src="Assets/Images/bathroom.jpg" alt="Bathroom Apartment" width="300" height="150">
+        <a target="_blank" href="assets/Images/bathroom.jpg">
+      <img src="assets/Images/bathroom.jpg" alt="Bathroom Apartment" width="300" height="150">
     </a>
         <div class="desc">Baño - Apartamento</div>
       </div>
@@ -271,8 +271,8 @@
 
     <div class="col-md-3">
       <div class="gallery">
-        <a target="_blank" href="Assets/Images/studio.jpg">
-      <img src="Assets/Images/studio.jpg" alt="Studio" width="300" height="150">
+        <a target="_blank" href="assets/Images/studio.jpg">
+      <img src="assets/Images/studio.jpg" alt="Studio" width="300" height="150">
     </a>
         <div class="desc">Estudio - Apartamento</div>
       </div>
