--- a/searchapartment.html
+++ b/searchapartment.html
@@ -423,7 +423,7 @@
 <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOLtR_9szBl7EVGkkAt3_UeWUiW4whytQ&callback=initMap"></script>
 <script src="assets/js/maps.js"></script>
-
+<script type="text/javascript" src="assets/js/searchform.js"></script>
 
 </body>
 
