Adding name to file input

--- a/rentout.ES.html
+++ b/rentout.ES.html
@@ -212,7 +212,7 @@
           </div>
           <div class="col-75">
             <div class="file-upload-wrapper">
-              <input type="file" id="input-file-now" class="file-upload"/>
+              <input type="file" name="input_file_now" id="input-file-now" class="file-upload"/>
             </div>
           </div>
           </div>
